--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -62,11 +62,11 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     {% endif %}
                     {% if not isFollower %}
                     <span class="material-icons tooltipped menu-profile" data-position="bottom" data-delay="50"
-                                                                                    data-tooltip="Acerca de {{ user_profile.username }}">menu</span>
+                                                                                    data-tooltip="Acerca de {{ user_profile.username }}">more_horiz</span>
                     {% else %}
                     <span class="material-icons tooltipped menu-profile" data-position="bottom" data-delay="50"
                                                                                     data-tooltip="Acerca de {{ user_profile.username }} - ¡Te sigue!"
-                                                                                    style="color: #1e88e5">menu</span>
+                                                                                    style="color: #1e88e5">more_horiz</span>
                     {% endif %}
                     <ul id="user-stats" class="stats">
                         <li>
