--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -34,8 +34,7 @@
                                     </h2>
                                     <div class="row">
                                         <div class="parrafo comment">
-                                            <p
-                                                    class="blue-text text-darken-2 pub-created">{{ pub.created|naturaltime }}</p>
+                                            <p class="blue-text text-darken-2 pub-created">{{ pub.created|naturaltime }}</p>
                                             <div class="wrp-comment">{{ pub.content|safe }}</div>
                                         </div>
                                         <div class="show-more" id="show-comment-{{ pub.pk }}">
