--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col l12 m12 s12 tags-content">
                                 {% for tag in object.tags.all %}
-                                    {% if tag and tag.split %}
+                                    {% if tag %}
                                     <blockquote><a
                                             href="{% url 'photologue:collection-list' photo.owner.username tag.slug %}">{{ tag.name }}</a>
                                     </blockquote>
