--- a/photologue_groups/templates/photologue_groups/photo_detail.html
+++ b/photologue_groups/templates/photologue_groups/photo_detail.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col l12 m12 s12 tags-content">
                                 {% for tag in object.tags.all %}
-                                    {% if tag and tag.split %}
+                                    {% if tag %}
                                     <blockquote><a
                                             href="{% url 'photologue_groups:collection-list' slug=object.group.slug tag_slug=tag.slug %}">{{ tag.name }}</a>
                                     </blockquote>
