--- a/skyfolk/templates/channels/new_video_gallery.html
+++ b/skyfolk/templates/channels/new_video_gallery.html
@@ -7,7 +7,7 @@
             {% if photo.tags.all %}
                 <div class="tags-content">
                     {% for tag in photo.tags.all %}
-                        {% if tag and tag.split %}
+                        {% if tag %}
                         <blockquote
                                 onclick="location.href='{% url 'photologue:collection-list' photo.owner.username tag.slug %}'">{{ tag.name }}</blockquote>
                         {% endif %}
