--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -16,12 +16,14 @@
                   data-delay="50"
                   data-tooltip="Ver conversación completa"><i class="material-icons md-18">open_in_new</i></span>
                         {% if user.id == node.author.id %}
+                            {% if node.event_type == 1 or node.event_type == 3 %}
                                 <span data-id="{{ node.pk }}"
                                       class="top-options edit-comment tooltipped"
                                       data-position="bottom"
                                       data-delay="50"
                                       data-tooltip="Editar comentario"><i
                                         class="material-icons md-18">mode_edit</i></span>
+                                {% endif %}
                         {% endif %}
                         <div class="row">
                             <div class="articulo col s12">
