--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -68,11 +68,13 @@
                   data-delay="50"
                   data-tooltip="Ver conversación completa"><a class="material-icons md-18" href="/publication/{{ node.id }}/">open_in_new</a></span>
                     {% if user.id == node.author.id %}
+                        {% if node.event_type == 1 or node.event_type == 3 %}
                                 <span data-id="{{ node.pk }}"
                                       class="top-options edit-comment tooltipped"
                                       data-position="bottom"
                                       data-delay="50"
                                       data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
+                            {% endif %}
                         {% endif %}
                             <div class="row">
                                 <div class="image col l1 m2 s2">
