+ Mejorando interfaz + Feedback para nestor

--- a/photologue/templates/photologue/videos/ajax_load_replies.html
+++ b/photologue/templates/photologue/videos/ajax_load_replies.html
@@ -34,7 +34,7 @@
                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
                         <div class="usr-img img-responsive">{% avatar node.author %}</div>
                     </div>
-                    <div class="col l10 m12 s9">
+                    <div class="col l11 s10">
                         <h2 class="h22"><a
                             href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                             {% if node.parent %}
