--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -22,7 +22,7 @@
                 <div class="image col l1 m2 s2">
                     <div class="usr-img img-responsive">{% avatar node.author %}</div>
                 </div>
-                <div class="articulo col s9">
+                <div class="articulo col l9 s8">
                     <h2 class="author-header"><a
                         href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                         {% if node.parent %}
