--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -22,7 +22,7 @@
                                 <div class="image col l1 m2 s2">
                                     <div class="usr-img img-responsive">{% avatar pub.author %}</div>
                                 </div>
-                                <div class="articulo col s9">
+                                <div class="articulo col l9 s8">
                                     <h2 class="author-header"><a
                                             href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a>
                                         {% if pub.parent %}
