--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -53,7 +53,7 @@
                                 <div class="image col l1 m2 s2">
                                     <div class="usr-img img-responsive">{% avatar node.p_author %}</div>
                                 </div>
-                                <div class="articulo col s9">
+                                <div class="articulo col l9 s8">
                                     <h2 class="author-header"><a
                                             href="/profile/{{ node.p_author.username }}">@{{ node.p_author.username }}</a>
                                         {% if node.parent %}
