--- a/photologue/templates/photologue/publications_entries.html
+++ b/photologue/templates/photologue/publications_entries.html
@@ -31,7 +31,7 @@
                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
                         <div class="usr-img img-responsive">{% avatar node.p_author %}</div>
                     </div>
-                    <div class="col l10 m12 s9">
+                    <div class="col l11 s10">
                         <h2 class="h22"><a
                             href="/profile/{{ node.p_author.username }}">@{{ node.p_author.username }}</a>
                             {% if node.parent %}
