--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -139,7 +139,9 @@ $followcolor: #64b5f6
 .user-pic
   width: 120px
   height: 120px
-
+  & img
+    max-width: 100%
+    max-height: 100%
 /* Posicionamiento default */
 .caja
   width: 90px
